[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://images/pack_images/packn1.png" type="Texture" id=2]
[ext_resource path="res://scenes/open_button_hover.tres" type="StyleBox" id=3]
[ext_resource path="res://scenes/open_button.tres" type="StyleBox" id=4]
[ext_resource path="res://fonts/Classic_font_24.tres" type="DynamicFont" id=5]
[ext_resource path="res://images/Menu_interface/credits.png" type="Texture" id=6]
[ext_resource path="res://images/Menu_interface/shiny_credits.png" type="Texture" id=7]
[ext_resource path="res://images/Menu_interface/boost.png" type="Texture" id=8]
[ext_resource path="res://images/buttons/next_button_hover.png" type="Texture" id=9]
[ext_resource path="res://images/buttons/next_button.png" type="Texture" id=10]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 300, 150 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 300, 150 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 120.013
margin_top = 116.287
margin_right = 620.013
margin_bottom = 816.287
rect_scale = Vector2( 0.68617, 0.68617 )
texture = ExtResource( 2 )

[node name="Button" type="Button" parent="TextureRect"]
margin_left = 186.59
margin_top = 367.997
margin_right = 311.59
margin_bottom = 432.997
custom_styles/hover = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )

[node name="credits_label" type="Label" parent="."]
margin_left = 1165.82
margin_top = 22.8036
margin_right = 1205.82
margin_bottom = 54.8036
grow_horizontal = 0
custom_fonts/font = ExtResource( 5 )
text = "NA"
align = 2

[node name="credits_texture" type="TextureRect" parent="credits_label"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 4.97156
margin_top = -9.33083
margin_right = 104.972
margin_bottom = 90.6692
rect_scale = Vector2( 0.489589, 0.489589 )
texture = ExtResource( 6 )

[node name="shinycredits_label" type="Label" parent="."]
margin_left = 1173.19
margin_top = 82.2876
margin_right = 1213.19
margin_bottom = 114.288
grow_horizontal = 0
custom_fonts/font = ExtResource( 5 )
text = "NA"

[node name="shinycredits_texture" type="TextureRect" parent="shinycredits_label"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -0.343994
margin_top = -8.58258
margin_right = 99.656
margin_bottom = 91.4174
rect_scale = Vector2( 0.497383, 0.497383 )
texture = ExtResource( 7 )

[node name="boost_label" type="Label" parent="."]
margin_left = 1172.71
margin_top = 139.439
margin_right = 1212.71
margin_bottom = 171.439
grow_horizontal = 0
custom_fonts/font = ExtResource( 5 )
text = "NA"

[node name="boost_texture" type="TextureRect" parent="boost_label"]
margin_left = 40.8223
margin_top = -6.99811
margin_right = 140.822
margin_bottom = 93.0019
rect_scale = Vector2( 0.488047, 0.488047 )
texture = ExtResource( 8 )

[node name="show_next_card" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -55.0
margin_top = -112.206
margin_right = 55.0
margin_bottom = -57.2057
custom_styles/hover = SubResource( 1 )
custom_styles/normal = SubResource( 2 )

[node name="ErrorLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -75.801
margin_right = 20.0
margin_bottom = -61.801
grow_horizontal = 2

[node name="CollectionButton" type="Button" parent="."]
margin_left = 651.858
margin_top = 274.126
margin_right = 663.858
margin_bottom = 294.126
custom_colors/font_color_disabled = Color( 1, 0, 0, 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.0784314, 0, 1, 1 )
text = "COLLECTION"

[connection signal="pressed" from="TextureRect/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="show_next_card" to="." method="_on_show_next_card_pressed"]
[connection signal="pressed" from="CollectionButton" to="." method="_on_CollectionButton_pressed"]
